fix: update text wrapping and content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,9 @@
     background-color: transparent !important;
   }
 }
+
+@layer utilities {
+  .break-anywhere {
+    word-break: break-all;
+  }
+}
